// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente GitExpertApp Debe de mostrar una lista de categorias 1`] = `
<div>
  <h2>
    GitExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</div>
`;

exports[`Pruebas en el componente GitExpertApp Debe mostrarse correctamente 1`] = `
<div>
  <h2>
    GitExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;
